--- a/Android_Studio/app/src/main/res/values/themes.xml
+++ b/Android_Studio/app/src/main/res/values/themes.xml
@@ -1,5 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<resources>
-
-    <style name="Theme.NumbuX" parent="android:Theme.Material.Light.NoActionBar" />
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <style name="Theme.Numbux" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Optional: override colors here -->
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryDark">@color/purple_700</item>
+        <item name="colorAccent">@color/teal_200</item>
+    </style>
 </resources>
