--- a/Android_Studio/app/src/main/res/layout/dialog_pin_input.xml
+++ b/Android_Studio/app/src/main/res/layout/dialog_pin_input.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:gravity="center"
@@ -8,7 +7,7 @@
     android:padding="24dp">
 
     <TextView
-        android:text="App Blocked During Focus Mode"
+        android:text="Enter PIN to exit Focus Mode"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:layout_marginBottom="16dp"
